--- a/LLMs_TextStudy/Test.ipynb
+++ b/LLMs_TextStudy/Test.ipynb
@@ -22,7 +22,8 @@
     "# mini_chatbot.py\n",
     "import difflib\n",
     "\n",
-    "#test\n",
+    "#test \n",
+    "#test2\n",
     "\n",
     "# This is your \"LLM brain\": a simple dictionary\n",
     "KNOWLEDGE = {\n",
