--- a/LLMs_TextStudy/Test.ipynb
+++ b/LLMs_TextStudy/Test.ipynb
@@ -75,19 +75,38 @@
    "execution_count": null,
    "id": "a8c921c9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.13.2' requires the ipykernel package.\n",
+      "\u001b[1;31mInstall 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'c:/Users/baran.be/AppData/Local/Programs/Python/Python313/python.exe -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
+   "source": [
+    "echo \"# VSCode_Workspace\" >> README.md\n",
+    "git init\n",
+    "git add README.md\n",
+    "git commit -m \"first commit\"\n",
+    "git branch -M main\n",
+    "git remote add origin git@github.com:BernadettaB/VSCode_Workspace.git\n",
+    "git push -u origin main"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.12.1"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
