testing with other file not md

--- a/LLMs_TextStudy/TextAnalysis_ShareholdersProposals.ipynb
+++ b/LLMs_TextStudy/TextAnalysis_ShareholdersProposals.ipynb
@@ -2,10 +2,127 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ece95e28",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 3 markdown files:\n",
+      " - a2190930zdef14a.md\n",
+      " - a2222821zdef14a.md\n",
+      " - abt012575_def14a.md\n",
+      "\n",
+      "====================================================================================================\n",
+      "a2190930zdef14a.md\n",
+      "--- Proposal 1 ---\n",
+      "**Shareholder Proposals**\n",
+      "\n",
+      "Three shareholder proposals have been received. Abbott is advised that the proposals will be presented for action at the Annual Meeting. The proposed resolutions and the statements made in support thereof are presented below.\n",
+      "\n",
+      "**The board of directors recommends that you vote AGAINST the proposals.**\n",
+      "\n",
+      "---\n",
+      "\n",
+      "47\n",
+      "\n",
+      "  \n",
+      "  \n",
+      "\n",
+      "---\n",
+      "\n",
+      "**Shareholder Proposal on Animal Testing (Item 5 ...\n",
+      "\n",
+      "--- Proposal 2 ---\n",
+      "**Shareholder Proposal on Health Care Principles (Item 6 on Proxy Card)**\n",
+      "\n",
+      "The Sisters of Charity of Saint Elizabeth, One Convent Road, Convent Station, NJ 07961 and sixteen other proponents have informed Abbott that they intend to present the following proposal at the meeting. Abbott will provide the proponents' names and addresses to any shareholder who requests that information and, if provided...\n",
+      "\n",
+      "--- Proposal 3 ---\n",
+      "**Shareholder Proposal on Advisory Vote (Item 7 on Proxy Card)**\n",
+      "\n",
+      "The Unitarian Universalist Association of Congregations, 25 Beacon Street, Boston, MA 02108, owner of 100 Abbott common shares, has informed Abbott that it intends to present the following proposal at the meeting. The proposal should be opposed in our Proxy Statement.\n",
+      "\n",
+      "RESOLVED, that the shareholders of Abbott Laboratories Corporati...\n",
+      "\n",
+      "\n",
+      "====================================================================================================\n",
+      "a2222821zdef14a.md\n",
+      "--- Proposal 1 ---\n",
+      "**Shareholder Proposals**](#ec13401_shareholder_proposals) |  | [64](#ec13401_shareholder_proposals) |\n",
+      "| [Shareholder Proposal on Genetically Modified Ingredients (Item 4 on Proxy Card)](#ee13401_shareholder_proposal_on_geneti__sha03040) | [65](#ee13401_shareholder_proposal_on_geneti__sha03040) |\n",
+      "| [*Proponent's Statement in Support of the Shareholder Proposal*](#ee13401_proponent_s_statement___ee...\n",
+      "\n",
+      "--- Proposal 2 ---\n",
+      "**SHAREHOLDER PROPOSALS**\n",
+      "\n",
+      "|  |\n",
+      "| --- |\n",
+      "| **INTRODUCTION** |\n",
+      "\n",
+      "Two shareholder proposals have been received and will be voted upon at the annual meeting only if properly presented by or on behalf of the proponent. Abbott is advised that the proposals will be presented for action at the Annual Meeting. The proposed resolutions and the statements made in support thereof, as well as the Board of Direc...\n",
+      "\n",
+      "--- Proposal 3 ---\n",
+      "**Shareholder Proposal on Genetically Modified Ingredients\n",
+      "  \n",
+      "(Item 4 on Proxy Card)—Continued**\n",
+      "\n",
+      "**Board of Directors' Statement in Opposition to the Shareholder Proposal on Genetically Modified Ingredients (Item 4 on Proxy Card)**\n",
+      "\n",
+      "The Board of Directors recommends that shareholders vote\n",
+      "\n",
+      "**AGAINST**\n",
+      "\n",
+      "this proposal.\n",
+      "\n",
+      "For the third year in a row, the same proponent is putting forward a proposal d...\n",
+      "\n",
+      "--- Proposal 4 ---\n",
+      "**Shareholder Proposal on Independent Board Chairman\n",
+      "  \n",
+      "(Item 5 on Proxy Card)**\n",
+      "\n",
+      "Mr. Kenneth Steiner, 14 Stoner Avenue, 2M, Great Neck, New York 11021 has informed Abbott that he intends to present the following proposal at the Annual Meeting and that he owns no fewer than 500 Abbott common shares.\n",
+      "\n",
+      "**PROPONENT'S STATEMENT IN SUPPORT OF SHAREHOLDER PROPOSAL**\n",
+      "\n",
+      "**WHEREAS:**\n",
+      "\n",
+      "Resolved: Shareholders...\n",
+      "\n",
+      "--- Proposal 5 ---\n",
+      "**Shareholder Proposal on Independent Board Chairman\n",
+      "  \n",
+      "(Item 5 on Proxy Card)—Continued**\n",
+      "\n",
+      "**Board of Directors' Statement in Opposition to the Shareholder Proposal on Independent Board Chairman (Item 5 on Proxy Card)**\n",
+      "\n",
+      "The Board of Directors recommends that shareholders vote\n",
+      "\n",
+      "**AGAINST**\n",
+      "\n",
+      "this proposal.\n",
+      "\n",
+      "For the sixth time since 2005, shareholders are being asked once again to vote on a shareho...\n",
+      "\n",
+      "--- Proposal 6 ---\n",
+      "**Shareholder Proposal on Independent Board Chairman\n",
+      "  \n",
+      "(Item 5 on Proxy Card)—Continued**\n",
+      "\n",
+      "The Board believes that shareholders are best served by giving the Board flexibility to select the best person to serve as Chairman. Abbott has a balanced governance system in which independent directors, including an independent Lead Director, exercise vigorous and meaningful independent oversight, as evid...\n",
+      "\n",
+      "\n",
+      "====================================================================================================\n",
+      "abt012575_def14a.md\n",
+      "--- Proposal 1 ---\n",
+      "No shareholder proposals found in this file....\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "from pathlib import Path\n",
@@ -103,7 +220,7 @@
     "    content = md_path.read_text(encoding=\"utf-8\", errors=\"replace\")\n",
     "    extracted_proposals = extract_shareholder_proposals(content)\n",
     "\n",
-    "    print(\"\\n\" + \"=\" * 200)\n",
+    "    print(\"\\n\" + \"=\" * 100)\n",
     "    print(md_path.name)\n",
     "\n",
     "    for idx, prop in enumerate(extracted_proposals, 1):\n",
